# FCTBI

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CORRECAO_FINAL.md  FCTBI_Respostas.spec  INTEGRACAO_FCTBI.md  README_BOLA_FLUTUANTE.md  README_Easter_Egg.md  README_IMPROVEMENTS.md  RESUMO_EXECUTAVEL.md  RESUMO_MELHORIAS.md  build_config.py  build_exe.py  build_executable.py  easter_egg_bianca.py  get-pip.py  integracao_easter_egg.py  main copy.py  main.py  pyproject.toml  readme.md  requirements.txt  respostas.json  setup.py  special_effects.py  tatus  test_floating_button.py  teste_easter_egg_fctbi.py
tests/: __init__.py  test_data_manager.py
